--- a/assets/tamplates/modals/winStateModal/style.css
+++ b/assets/tamplates/modals/winStateModal/style.css
@@ -23,11 +23,18 @@
     display: none;
     justify-content: center;
     align-items: center;
+    opacity: 1;
+    transition: opacity 0.3s ease;
+    /* Настройка длительности и плавности */
 }
 
-.modal-content {    
-    padding: 20px;    
-    width: 70%;    
+#WinStateModal.fade-out {
+    opacity: 0;
+}
+
+.modal-content {
+    padding: 20px;
+    width: 70%;
     position: relative;
 }
 
@@ -59,15 +66,15 @@
     padding: 10px;
 }
 
-.image {  
-    width: 66%;  
+.image {
+    width: 66%;
     box-sizing: border-box;
     text-align: center;
     cursor: pointer;
 }
 
 .image-description {
-    
+
     margin-top: 10px;
     padding: 0;
     font-size: 24px;
@@ -76,7 +83,7 @@
     font-family: 'DescriptionFont', sans-serif;
 }
 
-.brand-name {    
+.brand-name {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -88,7 +95,7 @@
 .brand-name span {
     margin: 0;
     padding: 0;
-    line-height: 1; 
+    line-height: 1;
 }
 
 .brand-name span:first-child {
@@ -99,5 +106,5 @@
 .brand-name span:last-child {
     color: #ffffff;
     font-size: 50px;
-    margin-top: -10px; 
+    margin-top: -10px;
 }
