--- a/assets/tamplates/modals/winStateModal/style.css
+++ b/assets/tamplates/modals/winStateModal/style.css
@@ -31,7 +31,7 @@
     opacity: 0;
 }
 
-.modal-content {
+.modal-content-electron {
     position: relative;
     display: flex;
     flex-direction: column;
